force-app/main/default/objects/Guest_Visit__c/Guest_Visit__c.object-meta.xml
<CustomObject>
    <label>Guest Visit</label>
    <nameField>
        <displayFormat>GV-{0000000}</displayFormat>
        <label>Guest Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>