force-app/main/default/objects/Guest_Visit__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>The date and time that this guest pass was used to enter the facility</description>
    <inlineHelpText>The date and time that this guest pass was used to enter the facility</inlineHelpText>
    <label>Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>