force-app/main/default/objects/Guest_Visit__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <description>Full name of the guest using the pass</description>
    <formula>IF( !ISBLANK( Contact__c ) , 
  Contact__r.FirstName + &quot; &quot; + Contact__r.LastName , 
  IF( !ISBLANK( Lead__c ) , 
    Lead__r.FirstName + &quot; &quot; + Lead__r.LastName , 
    First_Name__c + &quot; &quot; + Last_Name__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full name of the guest using the pass</inlineHelpText>
    <label>Guest Name</label>
    <type>Text</type>
</CustomField>