force-app/main/default/objects/Guest_Visit__c/fields/Guest_Pass__c.field-meta.xml
<CustomField>
    <fullName>Guest_Pass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The guest pass that was used for this visit</description>
    <inlineHelpText>The guest pass that was used for this visit</inlineHelpText>
    <label>Guest Pass</label>
    <referenceTo>Guest_Pass__c</referenceTo>
    <relationshipLabel>Guest Visits</relationshipLabel>
    <relationshipName>Guest_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>