force-app/main/default/objects/Guest_Visit__c/fields/Guest_Pass_Status__c.field-meta.xml
<CustomField>
    <fullName>Guest_Pass_Status__c</fullName>
    <label>Guest Pass Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>