force-app/main/default/objects/Guest_Visit__c/fields/Host_Member__c.field-meta.xml
<CustomField>
    <fullName>Host_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The member that shared the guest pass with the guest</description>
    <inlineHelpText>The member that shared the guest pass with the guest</inlineHelpText>
    <label>Host Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Guest_Passes_Shared</relationshipName>
    <type>Lookup</type>
</CustomField>