force-app/main/default/objects/Guest_Visit__c/fields/Host_Member_Membership__c.field-meta.xml
<CustomField>
    <fullName>Host_Member_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Member Membership</label>
    <referenceTo>TREX1__Membership__c</referenceTo>
    <relationshipName>Guest_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>