force-app/main/default/objects/Guest_Visit__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Guest Visits</relationshipLabel>
    <relationshipName>Guest_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>