force-app/main/default/objects/Guest_Visit__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TREX1__Location__c.Available_for_Guest_Visits__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TREX1__Location__c</referenceTo>
    <relationshipLabel>Guest Visits</relationshipLabel>
    <relationshipName>Guest_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>