force-app/main/default/objects/Guest_Visit__c/fields/Temporary_Card__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temporary Card</label>
    <referenceTo>Temporary_Card__c</referenceTo>
    <relationshipLabel>Guest Visits</relationshipLabel>
    <relationshipName>Guest_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>