force-app/main/default/objects/Guest_Visit__c/fields/Temporary_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Card_Number__c</fullName>
    <label>Temporary Card Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Battery Park City 1</fullName>
            </value>
            <value>
                <fullName>Battery Park City 2</fullName>
            </value>
            <value>
                <fullName>Battery Park City 3</fullName>
            </value>
            <value>
                <fullName>Battery Park City 4</fullName>
            </value>
            <value>
                <fullName>Battery Park City 5</fullName>
            </value>
            <value>
                <fullName>Battery Park City 6</fullName>
            </value>
            <value>
                <fullName>Battery Park City 7</fullName>
            </value>
            <value>
                <fullName>Battery Park City 8</fullName>
            </value>
            <value>
                <fullName>Battery Park City 9</fullName>
            </value>
            <value>
                <fullName>Battery Park City 10</fullName>
            </value>
            <value>
                <fullName>Upper East Side 1</fullName>
            </value>
            <value>
                <fullName>Upper East Side 2</fullName>
            </value>
            <value>
                <fullName>Upper East Side 3</fullName>
            </value>
            <value>
                <fullName>Upper East Side 4</fullName>
            </value>
            <value>
                <fullName>Upper East Side 5</fullName>
            </value>
            <value>
                <fullName>Upper East Side 6</fullName>
            </value>
            <value>
                <fullName>Upper East Side 7</fullName>
            </value>
            <value>
                <fullName>Upper East Side 8</fullName>
            </value>
            <value>
                <fullName>Upper East Side 9</fullName>
            </value>
            <value>
                <fullName>Upper East Side 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>