force-app/main/default/objects/Guest_Visit__c/fields/Temporary_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Card_Status__c</fullName>
    <label>Temporary Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>