force-app/main/default/objects/Guest_Visit__c/fields/Temporary_Card_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Card_Status_Image__c</fullName>
    <formula>IF( !ISBLANK( TEXT( Temporary_Card_Status__c ) ) , 
  IMAGE(
    CASE( Temporary_Card_Status__c , 
      &quot;Returned&quot;, &quot;https://asphaltgreen.file.force.com/servlet/servlet.ImageServer?id=0156Q000003QhbC&amp;oid=00DVB0000001IVx&amp;lastMod=1670343780000&quot;, 
      &quot;Issued&quot;, IF(DATEVALUE(Date_Time__c) &lt; TODAY(), &quot;https://asphaltgreen.file.force.com/servlet/servlet.ImageServer?id=0156Q000003QhbH&amp;oid=00DVB0000001IVx&amp;lastMod=1670343841000&quot;, &quot;https://asphaltgreen.file.force.com/servlet/servlet.ImageServer?id=0156Q000003Qhb7&amp;oid=00DVB0000001IVx&amp;lastMod=1670343758000&quot; ), 
    &quot;&quot;
    ) ,
    &quot;Temporary Card Status&quot; , 
    25, 100
  ) , 
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temporary Card Status</label>
    <type>Text</type>
</CustomField>