force-app/main/default/objects/Guest_Visit__c/fields/Waiver_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Signed_Date__c</fullName>
    <label>Waiver Signed Date</label>
    <type>Date</type>
</CustomField>