force-app/main/default/objects/Guest_Visit__c/fields/Waiver_Status__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Status__c</fullName>
    <label>Waiver Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>