force-app/main/default/objects/Guest_Visit__c/fields/Waiver_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Status_Image__c</fullName>
    <formula>IF( !ISBLANK( TEXT( Waiver_Status__c ) ) , 
  IMAGE(
    CASE( Waiver_Status__c , 
      &quot;Signed&quot;, &quot;https://asphaltgreen.file.force.com/servlet/servlet.ImageServer?id=0156Q000003Qhas&amp;oid=00DVB0000001IVx&amp;lastMod=1670343201000&quot;, 
      &quot;Not Required&quot;, &quot;https://asphaltgreen.file.force.com/servlet/servlet.ImageServer?id=0156Q000003Qhax&amp;oid=00DVB0000001IVx&amp;lastMod=1670343248000&quot;,
      &quot;Pending&quot;, &quot;https://asphaltgreen.file.force.com/servlet/servlet.ImageServer?id=0156Q000003Qhb2&amp;oid=00DVB0000001IVx&amp;lastMod=1670343236000&quot;, 
      &quot;&quot;
    ) ,
    &quot;Waiver Status&quot; , 
    25, 100
  ), 
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiver Status</label>
    <type>Text</type>
</CustomField>