force-app/main/default/objects/Guest_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Time__c</columns>
    <columns>Guest_Name__c</columns>
    <columns>Location__c</columns>
    <columns>Waiver_Status_Image__c</columns>
    <columns>Temporary_Card__c</columns>
    <columns>Temporary_Card_Status_Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>