force-app/main/default/objects/Guest_Visit__c/listViews/Search_for_Visit.listView-meta.xml
<ListView>
    <fullName>Search_for_Visit</fullName>
    <columns>NAME</columns>
    <columns>Date_Time__c</columns>
    <columns>Guest_Name__c</columns>
    <columns>Waiver_Status_Image__c</columns>
    <columns>Temporary_Card_Status_Image__c</columns>
    <columns>Temporary_Card__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Anthony</value>
    </filters>
    <label>Search for Visit</label>
</ListView>