force-app/main/default/objects/Guest_Visit__c/listViews/UES_Outstanding_Guest_Passes.listView-meta.xml
<ListView>
    <fullName>UES_Outstanding_Guest_Passes</fullName>
    <columns>NAME</columns>
    <columns>Date_Time__c</columns>
    <columns>Guest_Name__c</columns>
    <columns>Waiver_Status_Image__c</columns>
    <columns>Temporary_Card_Status_Image__c</columns>
    <columns>Temporary_Card__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Upper East Side</value>
    </filters>
    <label>UES - Outstanding Guest Passes</label>
</ListView>